--- a/src/njk/templates/partials/component/card-icons.njk
+++ b/src/njk/templates/partials/component/card-icons.njk
@@ -1,9 +1,9 @@
 <div class="card-icons">
-    <a href="#" class="card-icons__link">
+    <a href="certificate-programs.html" class="card-icons__link">
         <img src="{{ includePath }}images/icons/book-w.svg" alt="" class="img-fluid card-icons__icon" />
         <div class="card-icons__text">Certificate Programs</div>
     </a>
-    <a href="#" class="card-icons__link">
+    <a href="courses.html" class="card-icons__link">
         <img src="{{ includePath }}images/icons/book-b.svg" alt="" class="img-fluid card-icons__icon" />
         <div class="card-icons__text">Individual Courses</div>
     </a>
