--- a/src/njk/templates/partials/component/carousel-testimonial-2x.njk
+++ b/src/njk/templates/partials/component/carousel-testimonial-2x.njk
@@ -1,7 +1,7 @@
-<div id="carouselTestimonial2x" class="carousel slide carousel-testimonial-2x" data-ride="carousel">
+<div id="carouselTestimonial2x" class="carousel slide carousel-testimonial-2x pt-5" data-ride="carousel">
     
     <div class="text-center">
-        <h2 class="heading">Testimonial Carousel with 2 items per slide</h2>
+        <h2 class="heading mb-4">What Students Say about Us</h2>
     </div>
 
     <ol class="carousel-indicators">
@@ -16,15 +16,15 @@
             <div class="row">
                 <div class="col-md-6">
                     <blockquote class="carousel-testimonial__quote">
-                        <div class="carousel-testimonial__name">Eduardo Woods</div>
-                        <div class="carousel-testimonial__title">Co &amp; Founder IS Studio</div>
+                        <div class="carousel-testimonial__name">Alex Hvostik</div>
+                        <div class="carousel-testimonial__title">Business Intelligence</div>
                         <div class="wysiwyg">
-                            "{% include "partials/wysiwyg/sentence-md.njk" %}"
+                            “I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”
                         </div>
                         <!-- /.wysiwyg -->
                         <div class="carousel-testimonial__thumb">
                             <figure class="image image-1by1">
-                                <img src="https://placehold.it/200" alt="placeholder">
+                                <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
                             </figure>
                         </div>
                         <!-- /.carousel-testimonial__thumb -->
@@ -33,15 +33,15 @@
                 <!-- /.col-md-6 -->
                 <div class="col-md-6">
                     <blockquote class="carousel-testimonial__quote">
-                        <div class="carousel-testimonial__name">Joanna Newsom</div>
-                        <div class="carousel-testimonial__title">Harper &amp; Vocalist</div>
+                        <div class="carousel-testimonial__name">Alex Hvostik</div>
+                        <div class="carousel-testimonial__title">Business Intelligence</div>
                         <div class="wysiwyg">
                             "{% include "partials/wysiwyg/sentence-sm.njk" %}"
                         </div>
                         <!-- /.wysiwyg -->
                         <div class="carousel-testimonial__thumb">
                             <figure class="image image-1by1">
-                                <img src="https://placehold.it/200" alt="placeholder">
+                                <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
                             </figure>
                         </div>
                         <!-- /.carousel-testimonial__thumb -->
@@ -57,15 +57,15 @@
             <div class="row">
                 <div class="col-md-6">
                     <blockquote class="carousel-testimonial__quote">
-                        <div class="carousel-testimonial__name">Adam Jensen</div>
-                        <div class="carousel-testimonial__title">He Never Asked for This</div>
+                        <div class="carousel-testimonial__name">Alex Hvostik</div>
+                        <div class="carousel-testimonial__title">Business Intelligence</div>
                         <div class="wysiwyg">
                             "{% include "partials/wysiwyg/sentence-sm.njk" %}"
                         </div>
                         <!-- /.wysiwyg -->
                         <div class="carousel-testimonial__thumb">
                             <figure class="image image-1by1">
-                                <img src="https://placehold.it/200" alt="placeholder">
+                                <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
                             </figure>
                         </div>
                         <!-- /.carousel-testimonial__thumb -->
@@ -74,15 +74,15 @@
                 <!-- /.col-md-6 -->
                 <div class="col-md-6">
                     <blockquote class="carousel-testimonial__quote">
-                        <div class="carousel-testimonial__name">Richard Matthew Stallman</div>
-                        <div class="carousel-testimonial__title">It's Free Software!</div>
+                        <div class="carousel-testimonial__name">Alex Hvostik</div>
+                        <div class="carousel-testimonial__title">Business Intelligence</div>
                         <div class="wysiwyg">
-                            "{% include "partials/wysiwyg/sentence-md.njk" %}"
+                            “I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”
                         </div>
                         <!-- /.wysiwyg -->
                         <div class="carousel-testimonial__thumb">
                             <figure class="image image-1by1">
-                                <img src="https://placehold.it/200" alt="placeholder">
+                                <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
                             </figure>
                         </div>
                         <!-- /.carousel-testimonial__thumb -->
@@ -98,15 +98,15 @@
             <div class="row">
                 <div class="col-md-6">
                     <blockquote class="carousel-testimonial__quote">
-                        <div class="carousel-testimonial__name">Stefan Molyneux</div>
-                        <div class="carousel-testimonial__title">That's Not an Argument</div>
+                        <div class="carousel-testimonial__name">Alex Hvostik</div>
+                        <div class="carousel-testimonial__title">Business Intelligence</div>
                         <div class="wysiwyg">
                             "{% include "partials/wysiwyg/sentence-sm.njk" %}"
                         </div>
                         <!-- /.wysiwyg -->
                         <div class="carousel-testimonial__thumb">
                             <figure class="image image-1by1">
-                                <img src="https://placehold.it/200" alt="placeholder">
+                                <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
                             </figure>
                         </div>
                         <!-- /.carousel-testimonial__thumb -->
@@ -115,15 +115,15 @@
                 <!-- /.col-md-6 -->
                 <div class="col-md-6">
                     <blockquote class="carousel-testimonial__quote">
-                        <div class="carousel-testimonial__name">Sargon of the Akkads</div>
-                        <div class="carousel-testimonial__title">Have you even read Locke?</div>
+                        <div class="carousel-testimonial__name">Alex Hvostik</div>
+                        <div class="carousel-testimonial__title">Business Intelligence</div>
                         <div class="wysiwyg">
-                            "{% include "partials/wysiwyg/sentence-md.njk" %}"
+                            “I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”
                         </div>
                         <!-- /.wysiwyg -->
                         <div class="carousel-testimonial__thumb">
                             <figure class="image image-1by1">
-                                <img src="https://placehold.it/200" alt="placeholder">
+                                <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
                             </figure>
                         </div>
                         <!-- /.carousel-testimonial__thumb -->
