--- a/src/njk/templates/partials/component/feed-news.njk
+++ b/src/njk/templates/partials/component/feed-news.njk
@@ -1,6 +1,6 @@
-<div class="row">
-	<div class="col-md-6">
-		<div class="card-links">
+<div class="card-links">
+	<div class="row">
+		<div class="col-md-6 mb-5">
 			<a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
 				<h3 class="card-links__title">New Half-Day Workshops</h3>
 				<div class="wysiwyg">
@@ -9,8 +9,28 @@
 				<div class="btn btn-primary mb-2">All Half-Day Workshops</div>
 			</a>
 		</div>
-		<!-- /.card-links -->
+		<div class="col-md-6 mb-5">
+			<a class="card-links__link card-link-arrow card-link-arrow-bottom" href="mailto:learn@emory.edu">
+				<h3 class="card-links__title">Instructor Positions Available: Test Prep and Event Planning</h3>
+				<div class="wysiwyg">
+					<p>Emory Continuing Education is currently evaluating applications and interviewing instructors for a variety of subjects, including Test Prep (SAT, GMAT, GRE, and LSAT) and Event Planning. If interested, please contact us at learn@emory.edu.</p>
+				</div>
+			</a>
+		</div>
+		<!-- /.-col-sm-6 -->
 	</div>
-	<!-- /.-col-sm-6 -->
+	<!-- /.row -->
+	<div class="row">
+		<div class="col-md-6">
+			<a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+				<h3 class="card-links__title">ECE Partners with Brain Health Center</h3>
+				<div class="wysiwyg">
+					<p>This past fall, the ECE’s Osher Lifelong Learning Institute (OLLI) partnered with Emory University’s Brain Health Center (BHC) to bring helpful brain health classes to a group of life-long learners. We look forward to continuing this partnership in the fall of 2018.</p>
+				</div>
+			</a>
+		</div>
+		<!-- /.-col-sm-6 -->
+	</div>
+	<!-- /.row -->
 </div>
-<!-- /.row -->
+<!-- /.card-links -->
