--- a/src/njk/templates/partials/component/list-row.njk
+++ b/src/njk/templates/partials/component/list-row.njk
@@ -1,31 +1,300 @@
 <ul class="list-row">
-    {% for i in range(0,6) %}
     <li class="list-row__item">
-        <a class="list-row__link" href="#">
-            <div class="list-row__icon">
-                <img src="https://placehold.it/65" class="icon-lg" alt="">
-            </div>
-            <!-- /.list-row__icon -->
+        <a class="list-row__link" href="search.html">
             <div class="list-row__text">
-                List with icons - a long name that goes on
+                Accounting
             </div>
             <!-- /.list-row__text -->
         </a>
         <!-- /.list-row__link -->
     </li>
-    <li class="list-row__item">
-        <a class="list-row__link" href="#">
-            <div class="list-row__icon">
-                <img src="https://placehold.it/65" class="icon-lg" alt="">
-            </div>
-            <!-- /.list-row__icon -->
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
             <div class="list-row__text">
-                A shorter name
+                Anthropology and Archaeology
             </div>
             <!-- /.list-row__text -->
         </a>
         <!-- /.list-row__link -->
     </li>
-    {% endfor %}
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Biological Sciences
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Biotechnology
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Chemistry
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Communication
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Computer Science
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Creative Writing
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Digital Media and Design
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Dramatic Arts
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Economics
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Education
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Engineering Science
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Enterprise Management
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Environmental Studies
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Expository Writing
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Finance
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Languages
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Government
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                History
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                History of Art and Architecture
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Humanities
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Information Systems Management
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Journalism
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Legal Studies
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Management
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Mathematics
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Medical Sciences
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Museum Studies
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Organizational Behavior
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Philosophy
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Psychology
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
+	<li class="list-row__item">
+        <a class="list-row__link" href="search.html">
+            <div class="list-row__text">
+                Social Sciences
+            </div>
+            <!-- /.list-row__text -->
+        </a>
+        <!-- /.list-row__link -->
+    </li>
 </ul>
 <!-- /.list-row -->
