--- a/src/njk/templates/partials/form/search-filters.njk
+++ b/src/njk/templates/partials/form/search-filters.njk
@@ -1,6 +1,6 @@
 <form class="search-filters" id="searchFilters">
 
-    <button class="btn btn-sm btn-block btn-outline-primary my-2">Clear filters</button>
+    <button class="btn btn-sm btn-block btn-outline-primary my-4">Clear filters</button>
     
     <fieldset class="search-filters__fieldset">
         <legend class="search-filters__legend">Category</legend>
@@ -36,37 +36,31 @@
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck1-2">
             <label class="form-check-label" for="defaultCheck1-2">
-                Proactively incubate
+                Open Enrollment Course
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck2-2">
             <label class="form-check-label" for="defaultCheck2-2">
-                Progressively architect
+                Certificate Program
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck3-2">
             <label class="form-check-label" for="defaultCheck3-2">
-                Dramatically
+                Info Session
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck4-2">
             <label class="form-check-label" for="defaultCheck4-2">
-                Holisticly empower
+                Webinar
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck5-2">
             <label class="form-check-label" for="defaultCheck5-2">
-                Intrinsicly mesh
-            </label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck6-2">
-            <label class="form-check-label" for="defaultCheck6-2">
-                Assertively myocardinate
+                OLLI (Ages 50+)
             </label>
         </div>
     </fieldset>
@@ -77,55 +71,199 @@
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck1-3">
             <label class="form-check-label" for="defaultCheck1-3">
-                Appropriately transition
+                Accounting
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck2-3">
             <label class="form-check-label" for="defaultCheck2-3">
-                Uniquely
+                Anthropology and Archaeology
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck3-3">
             <label class="form-check-label" for="defaultCheck3-3">
-                Completely unleash
+                Biological Sciences
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck4-3">
             <label class="form-check-label" for="defaultCheck4-3">
-                Holisticly empower
+                Biotechnology
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck5-3">
             <label class="form-check-label" for="defaultCheck5-3">
-                Mesh
+                Chemistry
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck6-3">
             <label class="form-check-label" for="defaultCheck6-3">
-                Interactively transform
+                Communication
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck7-3">
             <label class="form-check-label" for="defaultCheck7-3">
-                Appropriately expedite
+                Computer Science
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck8-3">
             <label class="form-check-label" for="defaultCheck8-3">
-                Collaboratively
+                Creative Writing
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
             <label class="form-check-label" for="defaultCheck9-3">
-                Competently build
+                Digital Media and Design
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Dramatic Arts
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Economics
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Education
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Engineering Science
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Enterprise Management
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Environmental Studies
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Expository Writing
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Finance
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Languages
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Government
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                History
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                History of Art and Architecture
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Humanities
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Information Systems Management
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Journalism
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Legal Studies
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Management
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Mathematics
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Medical Sciences
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Museum Studies
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Organizational Behavior
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Philosophy
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Psychology
+            </label>
+        </div>
+		<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
+            <label class="form-check-label" for="defaultCheck9-3">
+                Social Sciences
             </label>
         </div>
     </fieldset>
