--- a/src/njk/templates/partials/hero/hero-home.njk
+++ b/src/njk/templates/partials/hero/hero-home.njk
@@ -16,7 +16,7 @@
                     <!-- /.wysiwyg -->
                 </div>
                 <!-- /.hero__lead -->
-                <a href="#" class="btn btn-block btn-lg btn-secondary">Browse Our Courses</a>
+                <a href="courses.html" class="btn btn-block btn-lg btn-secondary">Browse Our Courses</a>
                 <a href="#" class="btn btn-block btn-lg btn-primary">RSVP to an Upcoming Info Session/Webinar</a>
             </div>
             <!-- /.col-md-6 -->
