--- a/src/njk/templates/partials/js.njk
+++ b/src/njk/templates/partials/js.njk
@@ -39,6 +39,13 @@ BS carousel accessibility features
 
 <!--  
 #########################################
+BOOTSTRAP BREAKPOINTS
+#########################################
+-->
+<script src="{{ includePath }}js/if-b4-breakpoint.min.js"></script>
+
+<!--  
+#########################################
 PRIMARY SITE JAVASCRIPT
 This javascript is a combination of all
 locally imported JS files.
