--- a/src/njk/templates/partials/component/card-links.njk
+++ b/src/njk/templates/partials/component/card-links.njk
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col-sm-6 col-lg-4 mb-5">
-            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="search.html">
                 <h3 class="card-links__title">Certificate Programs</h3>
                 <ul class="card-links__list">
 					<li>Big Data</li>
@@ -14,7 +14,7 @@
             </a>
         </div><!-- /.col-md-4 -->
 		<div class="col-sm-6 col-lg-4 mb-5">
-            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="search.html">
                 <h3 class="card-links__title">Management and Supervision</h3>
                 <ul class="card-links__list">
                     <li>Essential of Human Resource (HR) Management</li>
@@ -26,7 +26,7 @@
             </a>
         </div><!-- /.col-md-4 -->
 		<div class="col-sm-6 col-lg-4 mb-5">
-            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="search.html">
                 <h3 class="card-links__title">Lean Six Sigma and Project Management</h3>
                 <ul class="card-links__list">
                     <li>Lean Six Sigma White Belt</li>
@@ -38,7 +38,7 @@
             </a>
         </div><!-- /.col-md-4 -->
 		<div class="col-sm-6 col-lg-4 mb-5">
-            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="search.html">
                 <h3 class="card-links__title">IT, Design and Development</h3>
                 <ul class="card-links__list">
                     <li>SQL Level 1</li>
@@ -50,7 +50,7 @@
             </a>
         </div><!-- /.col-md-4 -->
 		<div class="col-sm-6 col-lg-4 mb-5">
-            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="search.html">
                 <h3 class="card-links__title">Test Preparation</h3>
                 <ul class="card-links__list">
                     <li>GRE</li>
@@ -63,7 +63,7 @@
             </a>
         </div><!-- /.col-md-4 -->
 		<div class="col-sm-6 col-lg-4 mb-5">
-            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="search.html">
                 <h3 class="card-links__title">Fine Arts</h3>
                 <ul class="card-links__list">
                     <li>Digital Photography 1</li>
@@ -79,7 +79,7 @@
     <!-- /.row -->
 
     <div class="d-flex w-100 justify-content-center align-items-center py-3">
-        <a href="#" class="btn btn-secondary mr-1">View all offerings</a>
+        <a href="courses.html" class="btn btn-secondary mr-1">View all offerings</a>
         <a href="search.html" class="btn btn-white ml-1">
             <img src="{{ includePath }}images/icons/magnifier-w.svg" class="icon-sm" alt=""/> Search Courses
         </a>
