--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -27,6 +27,7 @@
             height: 30px;
         }
     }
+    @include only_safari9( '.logo__ece', (margin-left: 1rem) );
     .navbar-toggler {
         margin-left: 1rem;
         font-size: $font-size-sm;
@@ -43,11 +44,6 @@
                 padding-left: 0;
                 padding-right: 0;
                 font-size: 1.125rem;
-            }
-            // Dropdown toggle arrow
-            .dropdown-toggle::after {
-                border-top: 0.3em solid $sky-blue;
-                margin-left: 0;
             }
             // Hover state
             &:hover {
@@ -130,7 +126,7 @@
         position: relative;
         z-index: 3;
     }
-
+	
     @include media-breakpoint-down(md) {
         // Dropdown menu
         .dropdown-menu {
@@ -162,13 +158,19 @@
                     box-shadow: inset 0 3px 0 0 $yellow; // border-top
                 }
             }
-        }
-        // Dropdown menu
-        .dropdown-menu {
-            &.show {
-                @include box-shadow(.35);
+            // Dropdown menu
+            .dropdown-menu {
+                &.show {
+                    @include box-shadow(.35);
+                }
+                // Dropdown toggle arrow
+                .dropdown-toggle::after {
+                    border-top: 0.3em solid $sky-blue;
+                    margin-left: 0;
+                }
             }
         }
+        
     }
     @include media-breakpoint-up(xl) {
         .logo__ece img {
